@@ -71,7 +71,7 @@ class dhcp::dhcpd (
   $_downcase_os_name = downcase($facts['os']['name'])
   rsync { 'dhcpd':
     user     => "dhcpd_rsync_${::environment}_${_downcase_os_name}",
-    password => passgen("dhcpd_rsync_${::environment}_${_downcase_os_name}"),
+    password => simplib::passgen("dhcpd_rsync_${::environment}_${_downcase_os_name}"),
     server   => $rsync_server,
     timeout  => $rsync_timeout,
     source   => $rsync_source,
